hphp/test/slow/collection_classes/invalid-operations.php.expectf
object(HH\ImmVector)#3 (2) {
  [0]=>
  object(HH\Vector)#1 (1) {
    [0]=>
    int(1)
  }
  [1]=>
  object(HH\Vector)#2 (1) {
    [0]=>
    int(2)
  }
}
object(HH\ImmMap)#4 (2) {
  [0]=>
  object(HH\Vector)#5 (1) {
    [0]=>
    int(1)
  }
  [1]=>
  object(HH\Vector)#6 (1) {
    [0]=>
    int(2)
  }
}
object(HH\Pair)#7 (2) {
  [0]=>
  object(HH\Vector)#8 (1) {
    [0]=>
    int(1)
  }
  [1]=>
  object(HH\Vector)#9 (1) {
    [0]=>
    int(2)
  }
}

object(HH\ImmVector)#13 (2) {
  [0]=>
  array(1) {
    [0]=>
    object(HH\Vector)#11 (1) {
      [0]=>
      int(1)
    }
  }
  [1]=>
  array(1) {
    [0]=>
    object(HH\Vector)#12 (1) {
      [0]=>
      int(2)
    }
  }
}
object(HH\ImmMap)#14 (2) {
  [0]=>
  array(1) {
    [0]=>
    object(HH\Vector)#15 (1) {
      [0]=>
      int(1)
    }
  }
  [1]=>
  array(1) {
    [0]=>
    object(HH\Vector)#16 (1) {
      [0]=>
      int(2)
    }
  }
}
object(HH\Pair)#17 (2) {
  [0]=>
  array(1) {
    [0]=>
    object(HH\Vector)#18 (1) {
      [0]=>
      int(1)
    }
  }
  [1]=>
  array(1) {
    [0]=>
    object(HH\Vector)#19 (1) {
      [0]=>
      int(2)
    }
  }
}

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot use [] with collections for reading in an lvalue context
Caught exception: Cannot use [] with collections for reading in an lvalue context
Caught exception: Cannot use [] with collections for reading in an lvalue context


Fatal error: Collection elements cannot be taken by reference in %s on line 174
